--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.calltoaction.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.calltoaction.default.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.field.paragraph.calltoaction.field_heading
     - field.field.paragraph.calltoaction.field_image
+    - field.field.paragraph.calltoaction.field_link
     - field.field.paragraph.calltoaction.field_paragraph
     - image.style.preview_500xauto
     - paragraphs.paragraphs_type.calltoaction
   module:
+    - entity_reference_revisions
     - image
     - text
 id: paragraph.calltoaction.default
@@ -31,6 +33,14 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+  field_link:
+    weight: 3
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
   field_paragraph:
     weight: 1
     label: above
