--- a/deploy/var/drupal-config/sync/core.entity_form_display.node.article.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.node.article.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.article.field_market
     - field.field.node.article.field_platform
     - field.field.node.article.field_read_time
+    - field.field.node.article.field_theme
     - image.style.thumbnail
     - node.type.article
   module:
@@ -30,7 +31,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_category:
-    weight: 26
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -38,14 +39,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete_tags
   field_content:
-    weight: 2
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
   field_document_type:
-    weight: 27
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -67,7 +68,7 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
   field_market:
-    weight: 28
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -75,7 +76,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete_tags
   field_platform:
-    weight: 29
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
@@ -88,6 +89,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: number
+  field_theme:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
   path:
     type: path
     weight: 8
