--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.calltoaction.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.calltoaction.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.calltoaction.field_image
     - field.field.paragraph.calltoaction.field_link
     - field.field.paragraph.calltoaction.field_paragraph
+    - field.field.paragraph.calltoaction.field_theme
     - image.style.thumbnail
     - paragraphs.paragraphs_type.calltoaction
   module:
@@ -65,6 +66,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+  field_theme:
+    weight: 21
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
 hidden:
   created: true
   status: true
