--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.slide.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.slide.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.slide.field_heading
     - field.field.paragraph.slide.field_image
+    - field.field.paragraph.slide.field_theme
     - image.style.thumbnail
     - paragraphs.paragraphs_type.slide
   module:
@@ -28,6 +29,11 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+  field_theme:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
 hidden:
   created: true
   status: true
