--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.calltoaction.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.calltoaction.default.yml
@@ -7,11 +7,13 @@ dependencies:
     - field.field.paragraph.calltoaction.field_image
     - field.field.paragraph.calltoaction.field_link
     - field.field.paragraph.calltoaction.field_paragraph
+    - field.field.paragraph.calltoaction.field_theme
     - image.style.preview_500xauto
     - paragraphs.paragraphs_type.calltoaction
   module:
     - entity_reference_revisions
     - image
+    - options
     - text
 id: paragraph.calltoaction.default
 targetEntityType: paragraph
@@ -47,4 +49,10 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+  field_theme:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
 hidden: {  }
