--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.stories.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.stories.default.yml
@@ -6,10 +6,12 @@ dependencies:
     - field.field.paragraph.stories.field_heading
     - field.field.paragraph.stories.field_image
     - field.field.paragraph.stories.field_paragraph
+    - field.field.paragraph.stories.field_theme
     - image.style.preview_500xauto
     - paragraphs.paragraphs_type.stories
   module:
     - image
+    - options
     - text
 id: paragraph.stories.default
 targetEntityType: paragraph
@@ -37,4 +39,10 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+  field_theme:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
 hidden: {  }
