Make link field as no required for heroSecondary block.
Test: #278

--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockherosecondary.field_link.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockherosecondary.field_link.yml
@@ -14,7 +14,7 @@ entity_type: paragraph
 bundle: blockherosecondary
 label: Link
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
@@ -89,5 +89,74 @@ settings:
         enabled: false
       styles:
         weight: 44
+        enabled: false
+      blockfiltercontent:
+        weight: 50
+        enabled: false
+      blockherotertiary:
+        weight: 53
+        enabled: false
+      blockinfo:
+        weight: 58
+        enabled: false
+      blockmap:
+        weight: 60
+        enabled: false
+      blockmapsecondary:
+        weight: 61
+        enabled: false
+      blockmarketmap:
+        weight: 62
+        enabled: false
+      blocknetworkoverview:
+        weight: 64
+        enabled: false
+      blockpagenotfound:
+        weight: 65
+        enabled: false
+      blockpathtopurchase:
+        weight: 66
+        enabled: false
+      blockpersonaselector:
+        weight: 67
+        enabled: false
+      blockprogrammodule:
+        weight: 68
+        enabled: false
+      blockquote:
+        weight: 69
+        enabled: false
+      blockquotesecondary:
+        weight: 70
+        enabled: false
+      blocksmallheading:
+        weight: 71
+        enabled: false
+      blocksmallimage:
+        weight: 72
+        enabled: false
+      blocksmallinfo:
+        weight: 73
+        enabled: false
+      blockstoryinfoimages:
+        weight: 74
+        enabled: false
+      blocktext:
+        weight: 75
+        enabled: false
+      networkoverviewitem:
+        weight: 79
+        enabled: false
+      personas:
+        weight: 80
+        enabled: false
+      stepmap:
+        weight: 87
+        enabled: false
+      steppurchase:
+        weight: 88
+        enabled: false
+      stories:
+        weight: 89
         enabled: false
 field_type: entity_reference_revisions
