--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.step.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.step.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.step.field_heading
-    - field.field.paragraph.step.field_key
+    - field.field.paragraph.step.field_icon_list
     - field.field.paragraph.step.field_paragraph
     - paragraphs.paragraphs_type.step
   module:
@@ -21,13 +21,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
-  field_key:
-    weight: 2
-    settings:
-      size: 60
-      placeholder: ''
+  field_icon_list:
+    weight: 3
+    settings: {  }
     third_party_settings: {  }
-    type: string_textfield
+    type: options_select
   field_paragraph:
     weight: 1
     settings:
