Update the programModule block.
Test: #283

--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockprogrammodule.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockprogrammodule.default.yml
@@ -3,17 +3,44 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.blockprogrammodule.field_programs
     - field.field.paragraph.blockprogrammodule.field_styles
     - paragraphs.paragraphs_type.blockprogrammodule
   module:
+    - field_group
     - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
 id: paragraph.blockprogrammodule.default
 targetEntityType: paragraph
 bundle: blockprogrammodule
 mode: default
 content:
+  field_programs:
+    type: entity_reference_paragraphs
+    weight: 2
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: program
+    third_party_settings: {  }
   field_styles:
-    weight: 0
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
