--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.slideheromain.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.slideheromain.default.yml
@@ -3,17 +3,16 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.slideheromain.field_file
     - field.field.paragraph.slideheromain.field_heading
     - field.field.paragraph.slideheromain.field_image
     - field.field.paragraph.slideheromain.field_link
     - field.field.paragraph.slideheromain.field_paragraph
     - field.field.paragraph.slideheromain.field_statistics
+    - field.field.paragraph.slideheromain.field_video
     - image.style.preview_500xauto
     - paragraphs.paragraphs_type.slideheromain
   module:
     - entity_reference_revisions
-    - file
     - image
     - text
 id: paragraph.slideheromain.default
@@ -21,12 +20,6 @@ targetEntityType: paragraph
 bundle: slideheromain
 mode: default
 content:
-  field_file:
-    weight: 8
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: file_default
   field_heading:
     weight: 0
     label: above
@@ -64,4 +57,11 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+  field_video:
+    weight: 9
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
 hidden: {  }
