--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "mediamonks/mm_gaia": "^1.0",
         "drupal/facets": "1.0-alpha7",
         "drupal/admin_toolbar": "1.18",
-        "drupal/video_embed_field": "1.3",
+        "drupal/video_embed_field": "1.4",
         "drupal/field_group": "1.0-rc6",
         "drupal/jquery_colorpicker": "1.0-rc2",
         "drupal/sqlsrv": "1.0-rc4",
@@ -45,7 +45,12 @@
         "drupal/color_field": "2.0-rc1",
         "drupal/toolbar_menu": "1.3",
         "drupal/pathauto": "1.0-rc1",
-        "drupal/imagick": "1.0"
+        "drupal/imagick": "1.0",
+        "drupal/entity": "1.0-alpha4",
+        "drupal/entity_browser": "1.0-rc2",
+        "drupal/inline_entity_form": "1.0-beta1",
+        "drupal/media_entity": "1.6",
+        "drupal/media_entity_video": "1.0-beta1"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
