--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherosecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherosecondary.default.yml
@@ -3,19 +3,20 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.video
     - field.field.paragraph.blockherosecondary.field_background_color
-    - field.field.paragraph.blockherosecondary.field_file
     - field.field.paragraph.blockherosecondary.field_heading
     - field.field.paragraph.blockherosecondary.field_image
     - field.field.paragraph.blockherosecondary.field_link
     - field.field.paragraph.blockherosecondary.field_paragraph
     - field.field.paragraph.blockherosecondary.field_styles
+    - field.field.paragraph.blockherosecondary.field_video
     - image.style.thumbnail
     - paragraphs.paragraphs_type.blockherosecondary
   module:
     - color_field
+    - entity_browser
     - field_group
-    - file
     - image
     - paragraphs
     - text
@@ -55,12 +56,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: color_field_widget_html5
-  field_file:
-    weight: 1
-    settings:
-      progress_indicator: throbber
-    third_party_settings: {  }
-    type: file_generic
   field_heading:
     weight: 5
     settings:
@@ -69,7 +64,7 @@ content:
     third_party_settings: {  }
     type: string_textfield
   field_image:
-    weight: 2
+    weight: 1
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -104,6 +99,19 @@ content:
       default_paragraph_type: styles
     third_party_settings: {  }
     type: entity_reference_paragraphs
+  field_video:
+    weight: 2
+    settings:
+      entity_browser: video
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: default
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
 hidden:
   created: true
   status: true
