--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherotertiary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherotertiary.default.yml
@@ -3,14 +3,15 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.blockherotertiary.field_file
+    - entity_browser.browser.video
     - field.field.paragraph.blockherotertiary.field_image
     - field.field.paragraph.blockherotertiary.field_styles
+    - field.field.paragraph.blockherotertiary.field_video
     - image.style.thumbnail
     - paragraphs.paragraphs_type.blockherotertiary
   module:
+    - entity_browser
     - field_group
-    - file
     - image
     - paragraphs
 third_party_settings:
@@ -32,12 +33,6 @@ targetEntityType: paragraph
 bundle: blockherotertiary
 mode: default
 content:
-  field_file:
-    weight: 1
-    settings:
-      progress_indicator: throbber
-    third_party_settings: {  }
-    type: file_generic
   field_image:
     weight: 2
     settings:
@@ -56,6 +51,19 @@ content:
       default_paragraph_type: ''
     third_party_settings: {  }
     type: entity_reference_paragraphs
+  field_video:
+    weight: 1
+    settings:
+      entity_browser: video
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: default
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
 hidden:
   created: true
   status: true
