--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockherotertiary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockherotertiary.default.yml
@@ -3,26 +3,19 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.blockherotertiary.field_file
     - field.field.paragraph.blockherotertiary.field_image
     - field.field.paragraph.blockherotertiary.field_styles
+    - field.field.paragraph.blockherotertiary.field_video
     - image.style.preview_500xauto
     - paragraphs.paragraphs_type.blockherotertiary
   module:
     - entity_reference_revisions
-    - file
     - image
 id: paragraph.blockherotertiary.default
 targetEntityType: paragraph
 bundle: blockherotertiary
 mode: default
 content:
-  field_file:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: file_default
   field_image:
     weight: 0
     label: above
@@ -39,4 +32,11 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+  field_video:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
 hidden: {  }
