--- a/deploy/var/drupal-config/sync/core.entity_form_display.node.article.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.node.article.default.yml
@@ -3,10 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.article.field_blocks
     - field.field.node.article.field_category
     - field.field.node.article.field_content
     - field.field.node.article.field_document_type
     - field.field.node.article.field_excerpt
+    - field.field.node.article.field_header_theme
     - field.field.node.article.field_image
     - field.field.node.article.field_market
     - field.field.node.article.field_platform
@@ -15,9 +17,62 @@ dependencies:
     - image.style.thumbnail
     - node.type.article
   module:
+    - field_group
     - image
+    - paragraphs
     - path
     - text
+third_party_settings:
+  field_group:
+    group_tabs:
+      children:
+        - group_tab_fields
+        - group_tab_blocks
+      parent_name: ''
+      weight: 0
+      format_type: tabs
+      format_settings:
+        id: ''
+        classes: ''
+        direction: horizontal
+      label: Tabs
+    group_tab_fields:
+      children:
+        - title
+        - field_excerpt
+        - field_theme
+        - field_content
+        - field_image
+        - field_read_time
+        - field_category
+        - field_document_type
+        - field_market
+        - field_platform
+      parent_name: group_tabs
+      weight: 14
+      format_type: tab
+      format_settings:
+        label: Fields
+        formatter: open
+        description: ''
+        required_fields: true
+        id: ''
+        classes: ''
+      label: Fields
+    group_tab_blocks:
+      children:
+        - field_header_theme
+        - field_blocks
+      parent_name: group_tabs
+      weight: 15
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Blocks
 _core:
   default_config_hash: 7CvVDwPYotAZFBa36mcpMKZOfVRRp_iGuPHpHaavI6E
 id: node.article.default
@@ -27,11 +82,22 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 4
     settings: {  }
     third_party_settings: {  }
+  field_blocks:
+    weight: 29
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
   field_category:
-    weight: 9
+    weight: 24
     settings:
       match_operator: CONTAINS
       size: 60
@@ -39,14 +105,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete_tags
   field_content:
-    weight: 3
+    weight: 18
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
   field_document_type:
-    weight: 10
+    weight: 25
     settings:
       match_operator: CONTAINS
       size: 60
@@ -54,21 +120,26 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete_tags
   field_excerpt:
-    weight: 1
+    weight: 16
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+  field_header_theme:
+    weight: 28
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
   field_image:
     type: image_image
-    weight: 4
+    weight: 19
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
   field_market:
-    weight: 11
+    weight: 26
     settings:
       match_operator: CONTAINS
       size: 60
@@ -76,7 +147,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete_tags
   field_platform:
-    weight: 12
+    weight: 27
     settings:
       match_operator: CONTAINS
       size: 60
@@ -84,31 +155,31 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete_tags
   field_read_time:
-    weight: 5
+    weight: 20
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
   field_theme:
-    weight: 2
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
   path:
     type: path
-    weight: 8
+    weight: 5
     settings: {  }
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: 15
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
