--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.article.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.article.default.yml
@@ -3,10 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.article.field_blocks
     - field.field.node.article.field_category
     - field.field.node.article.field_content
     - field.field.node.article.field_document_type
     - field.field.node.article.field_excerpt
+    - field.field.node.article.field_header_theme
     - field.field.node.article.field_image
     - field.field.node.article.field_market
     - field.field.node.article.field_platform
@@ -15,6 +17,7 @@ dependencies:
     - image.style.large
     - node.type.article
   module:
+    - entity_reference_revisions
     - image
     - options
     - text
@@ -26,6 +29,14 @@ targetEntityType: node
 bundle: article
 mode: default
 content:
+  field_blocks:
+    weight: 109
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
   field_category:
     weight: 104
     label: above
@@ -53,6 +64,12 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+  field_header_theme:
+    weight: 110
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
   field_image:
     type: image
     weight: -1
