--- a/deploy/var/drupal-config/sync/field.storage.paragraph.field_type.yml
+++ b/deploy/var/drupal-config/sync/field.storage.paragraph.field_type.yml
@@ -13,19 +13,16 @@ settings:
   allowed_values:
     -
       value: 0
-      label: '0'
+      label: Internal
     -
       value: 1
-      label: '1'
+      label: External
     -
       value: 2
-      label: '2'
+      label: 'Scroll to next section'
     -
       value: 3
-      label: '3'
-    -
-      value: 4
-      label: '4'
+      label: 'Contact us'
   allowed_values_function: ''
 module: options
 locked: false
