--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherosecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherosecondary.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.video
+    - entity_browser.browser.video_internal
     - field.field.paragraph.blockherosecondary.field_background_color
     - field.field.paragraph.blockherosecondary.field_heading
     - field.field.paragraph.blockherosecondary.field_image
@@ -102,7 +102,7 @@ content:
   field_video:
     weight: 2
     settings:
-      entity_browser: video
+      entity_browser: video_internal
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
