--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherotertiary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherotertiary.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.video
+    - entity_browser.browser.video_internal
     - field.field.paragraph.blockherotertiary.field_image
     - field.field.paragraph.blockherotertiary.field_styles
     - field.field.paragraph.blockherotertiary.field_video
@@ -54,7 +54,7 @@ content:
   field_video:
     weight: 1
     settings:
-      entity_browser: video
+      entity_browser: video_internal
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
