--- a/deploy/var/drupal-config/sync/field.field.node.article.field_read_time.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.article.field_read_time.yml
@@ -10,7 +10,7 @@ field_name: field_read_time
 entity_type: node
 bundle: article
 label: 'Read time'
-description: ''
+description: 'Read time in minutes, e.g. 5, 10, 1, 2'
 required: true
 translatable: false
 default_value: {  }
