--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.article.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.article.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.article.field_market
     - field.field.node.article.field_platform
     - field.field.node.article.field_read_time
+    - field.field.node.article.field_subheading
     - field.field.node.article.field_theme
     - image.style.large
     - node.type.article
@@ -109,6 +110,13 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_integer
+  field_subheading:
+    weight: 112
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
   field_theme:
     weight: 108
     label: above
