Remove font.css.
Test: #291

--- a/composer.json
+++ b/composer.json
@@ -130,7 +130,8 @@
                 "Do not match dynamic page cache responses": "patches/mm_rest-do_not_match_dynamicpagecache.patch"
             },
             "mediamonks/mm_gaia": {
-                "Fix wrong version path. Remove when the MR get merged.": "patches/mm_gaia-fix_wrong_version_path.patch"
+                "Fix wrong version path. Remove when the MR get merged.": "patches/mm_gaia-fix_wrong_version_path.patch",
+                "Remove font.css": "patches/mm_gaia-remove_font_css.patch"
             }
         },
         "installer-paths": {
