--- a/deploy/var/drupal-config/sync/core.entity_view_display.user.user.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.user.user.default.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.field.user.user.field_name
     - field.field.user.user.field_role
-    - field.field.user.user.field_title
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -34,6 +33,8 @@ content:
     type: string
   member_for:
     weight: 5
+    settings: {  }
+    third_party_settings: {  }
   user_picture:
     type: image
     weight: 0
@@ -42,5 +43,4 @@ content:
       image_link: content
     third_party_settings: {  }
     label: hidden
-hidden:
-  field_title: true
+hidden: {  }
