Pardot Integration. Remove debug information, allow GET responses from Pardot.
Test: #297

--- a/deploy/htdocs/modules/custom/spectrum_rest/spectrum_rest.routing.yml
+++ b/deploy/htdocs/modules/custom/spectrum_rest/spectrum_rest.routing.yml
@@ -8,6 +8,6 @@ spectrum_rest.contact.create_request:
 spectrum_rest.contact.process_response:
   path: 'api/v1/contact/process'
   defaults: { _controller: '\Drupal\spectrum_rest\Controller\Contact::processRequest' }
-  methods:  [POST]
+  methods:  [POST, GET]
   requirements:
     _access: 'TRUE'
