Add view counter endpoint.
Test: #296

--- a/deploy/htdocs/modules/custom/spectrum_rest/spectrum_rest.routing.yml
+++ b/deploy/htdocs/modules/custom/spectrum_rest/spectrum_rest.routing.yml
@@ -11,3 +11,10 @@ spectrum_rest.contact.process_response:
   methods:  [POST, GET]
   requirements:
     _access: 'TRUE'
+
+spectrum_rest.view_counter:
+  path: 'api/v1/counter/{slug}'
+  defaults: { _controller: '\Drupal\spectrum_rest\Controller\ViewCounter::count' }
+  methods:  [POST]
+  requirements:
+    _access: 'TRUE'
