Added sync for new endpoint (view counter)

--- a/deploy/var/drupal-config/sync/user.role.anonymous.yml
+++ b/deploy/var/drupal-config/sync/user.role.anonymous.yml
@@ -19,3 +19,5 @@ permissions:
   8: 'restful get spin_rest_init_v1'
   9: 'restful get spectrum_rest_article_v1'
   10: 'restful post spectrum_rest_contact_v1'
+  11: 'restful get spin_rest_view_counter_v1'
+  12: 'restful post spectrum_rest_view_counter_v1'
