--- a/deploy/var/drupal-config/sync/user.role.authenticated.yml
+++ b/deploy/var/drupal-config/sync/user.role.authenticated.yml
@@ -25,3 +25,5 @@ permissions:
   - 'restful get spin_rest_init_v1'
   - 'restful get spectrum_rest_article_v1'
   - 'restful post spectrum_rest_contact_v1'
+  - 'restful get spin_rest_view_counter_v1'
+  - 'restful post spectrum_rest_view_counter_v1'
