--- a/deploy/htdocs/api/mock/filter-content/knowledge-center.json
+++ b/deploy/htdocs/api/mock/filter-content/knowledge-center.json
@@ -13,7 +13,7 @@
 				"id": "articleTeaser",
 				"data": {
 					"heading": "Go Beyond High Profile Sport Events",
-					"paragraph": "Lorem ipsum dolor sit ametm conse ctetuer.",
+					"paragraph": "Lorem ipsum dolor sit ametm conse ctetuer. Lorem ipsum dolor sit ametm conse ctetuer. Lorem ipsum dolor sit ametm conse ctetuer.",
 					"theme": 0,
 					"target": "knowledge-center/dummy-article",
 					"image": {
